--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ theme: jekyll-theme-slate
 title: "CS372"
 description: "Digital Music Processing"
 
-url                      : https://ursinus-cs372-s2023.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://digitalmusicprocessing.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/Modules" # the subpath of your site, e.g. "/blog"
     
 # Reading Files
